src/test/ui/reachable/expr_add.stderr
error: unreachable expression
  --> $DIR/expr_add.rs:17:13
   |
LL |     let x = Foo + return;
   |             ^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_add.rs:3:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_add.rs:17:19
   |
LL |     let x = Foo + return;
   |                   ^^^^^^

error: aborting due to previous error

